# rust-obs-plugins

./: .gitignore  AGENTS.md  Cargo.toml  README.md  justfile
obs-sys/: Cargo.toml  build.rs
plugins/avatar-plugin/: Cargo.toml  README.md
plugins/avatar-plugin/assets/bongo_cat/: README.md  avatar.json
plugins/avatar-plugin/assets/bongo_cat/mode/keyboard/: config.json
plugins/avatar-plugin/assets/bongo_cat/mode/standard/: config.json
plugins/avatar-plugin/examples/: avatar_render.rs  avatar_render_keyboard.rs  avatar_render_standard.rs  wayland_keyboard_capture.rs
plugins/avatar-plugin/src/: input_capture.rs  lib.rs  loader.rs
plugins/avatar-plugin/tools/: validate_config.py
plugins/rnnoise-denoiser-filter/: Cargo.toml
plugins/rnnoise-denoiser-filter/src/: lib.rs
plugins/scroll-focus-filter/: Cargo.toml
src/: module.rs
src/output/: context.rs
