[package]
name = "obs-sys"
version = "0.3.1-tm"
authors = ["Bennett Hardwick <me@bennetthardwick.com>"]
edition = "2024"
links = "obs"
description = "Bindgen of <obs/obs.h>"
license = "GPL-2.0"
repository = "https://github.com/TakiMoysha/rust-obs-plugins"

[build-dependencies]
bindgen = "0.72"

[target.'cfg(windows)'.build-dependencies]
cc = "1.2"
regex = "1.12"
winreg = "0.55"

[target.'cfg(target_os = "macos")'.build-dependencies]
shellexpand = "3.1"
