[package]
name = "avatar-plugin"
version = "0.2.0"
edition = "2024"

[dependencies]
obs-wrapper = { path = "../.." }
image = "0.25.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Для математики и физики
nalgebra = "0.32"

# Для интерполяции
lerp = "0.5"

# Для обработки ошибок
thiserror = "2.0"

# Wayland input capture dependencies (optional, enabled by 'wayland' feature)
evdev = { version = "0.12", optional = true }
libc = "0.2"

# Опционально: Live2D в будущем
# cubism = { git = "https://github.com/Veykril/cubism-rs", optional = true }

# Platform-specific dependencies for input capture
[target.'cfg(target_os = "windows")'.dependencies]
# TODO: Add windows-rs or winapi for Windows hooks
# windows = { version = "0.58", features = ["Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse"] }

[target.'cfg(all(target_os = "linux", feature = "x11"))'.dependencies]
# TODO: Add X11 libraries
# x11 = { version = "2.21", features = ["xlib", "xinput2", "xrecord"] }

[dev-dependencies]
ctrlc = "3.4"

[features]
default = ["simple"]
simple = []  # PNG-based подход
live2d = []  # Для будущей поддержки Live2D (требует Cubism SDK)

# Input capture features - only one should be enabled at a time on Linux
x11 = []      # Linux X11 input capture
wayland = ["evdev"]  # Linux Wayland input capture (requires evdev)

[lib]
name = "avatarplugin"
crate-type = ["cdylib"]
