[package]
name = "avatar-plugin"
version = "0.2.0"
edition = "2024"

[dependencies]
obs-wrapper = { path = "../.." }
image = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
nalgebra = "0.34"                                  # math and physics
lerp = "0.5"                                       # interpolation

# Wayland input capture dependencies (optional, enabled by 'wayland' feature)
evdev = { version = "0.13", optional = true }
libc = "0.2"

# Platform-specific dependencies for input capture
[target.'cfg(target_os = "windows")'.dependencies]
# TODO: Add windows-rs or winapi for Windows hooks
# windows = { version = "0.58", features = ["Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse"] }

[target.'cfg(all(target_os = "linux", feature = "x11"))'.dependencies]
# TODO: Add X11 libraries
# x11 = { version = "2.21", features = ["xlib", "xinput2", "xrecord"] }

[dev-dependencies]
ctrlc = "3.4"
anyhow = "1.0"
env_logger = "0.11"
log = "0.4"
# examples
macroquad = "0.4"

[features]
default = ["wayland"]

# Input capture features - only one should be enabled at a time on Linux
x11 = []            # Linux X11 input capture
wayland = ["evdev"] # Linux Wayland input capture (requires evdev)

[lib]
name = "avatarplugin"
crate-type = ["cdylib", "rlib"]
