[package]
name = "rnnoise-denoiser-filter"
version = "0.1.1-tm"
authors = ["Bennett Hardwick <me@bennetthardwick.com>"]
edition = "2024"

[dependencies]
obs-wrapper = { path = "../.." }
nnnoiseless = { version = "0.5.1" }
dasp = { version = "0.11.0", features = [ "interpolate", "signal", "ring_buffer", "interpolate-linear" ] }

[lib]
name = "rnnoisedenoiser"
crate-type = ["cdylib"]
