[package]
name = "scroll-focus-filter"
version = "0.1.1-tm"
authors = ["Bennett Hardwick <me@bennetthardwick.com>"]
edition = "2024"

[dependencies]
obs-wrapper = { path = "../.." }
crossbeam-channel = "0.5"
xcb = { version = "0.9.0", features = [ "randr" ] }
xcb-util = { version = "0.3.0", features = [ "ewmh" ] }

[lib]
name = "scrollfocus"
crate-type = ["cdylib"]
